--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 	<version>SNAPSHOT 0.0.1</version>
 
 	<properties>
-		<!--  Set the Java version used by the compiler. -->
-		<!--  Setting to Java 8 will work, in most cases, for installed -->
-		<!--  Java versions >= 8. -->
+		<!-- Set the Java version used by the compiler. -->
+		<!-- Setting to Java 8 will work, in most cases, for installed -->
+		<!-- Java versions >= 8. -->
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
@@ -37,6 +37,15 @@
 			<artifactId>cucumber-java</artifactId>
 			<version>6.9.1</version>
 		</dependency>
+		
+		<!-- Custom import -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
@@ -54,7 +63,7 @@
 			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!--  These two dependencies allow to run JUnit 4 tests and Cucumber tests. -->
+		<!-- These two dependencies allow to run JUnit 4 tests and Cucumber tests. -->
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
